--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  font-family: "Lato";
+  background-color: #16324F;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +13,46 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  padding: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  display: flex;
+  list-style: none;
+  border-radius: 15px;
+  width: 60vw;
+  background-color: #2A628F;
+  margin-bottom: 25px;
+  padding: 30px;
+  text-align: left;
+}
+
+img {
+  height: 250px;
+  margin: 20px;
+}
+
+h3 span {
+  color: #3E92CC;
+  font-size: calc(10px + 1vmin);
+}
+
+.tagline {
+  font-size: calc(10px + 1vmin);
+  letter-spacing: 3px;
+  font-style: italic;
+}
+
+.description {
+  font-size: calc(10px + .7vmin);
+}
+
+.description span {
+  color: #3E92CC;
+}
+
+.heart {
+  text-align: right;
+  padding-top: 20px;
 }
